--- a/frontend/src/app/@theme/components/header/header.component.scss
+++ b/frontend/src/app/@theme/components/header/header.component.scss
@@ -62,6 +62,7 @@
             @include nb-rtl(border-right, 1px solid nb-theme(divider-color));
             white-space: nowrap;
             text-decoration: none;
+            width: 5em;
         }
         .logo-un-obs img {
             padding-left: 0.1em;
