--- a/frontend/src/app/@theme/styles/obs-rio-theme.scss
+++ b/frontend/src/app/@theme/styles/obs-rio-theme.scss
@@ -2,6 +2,4 @@
 @import "~@nebular/theme/styles/theming";
 // @nebular out of the box themes
 @import "~@nebular/theme/styles/themes";
-// material themes
-@import "./material/material-light";
-$nb-themes: nb-register-theme( (), obsrio, material-light);
+$nb-themes: nb-register-theme( (), obsrio, default);
