--- a/frontend/src/app/pages/auth/login/login.component.html
+++ b/frontend/src/app/pages/auth/login/login.component.html
@@ -2,94 +2,63 @@
 <p class="sub-title">Ingrese con su e-mail y contraseña.</p>
 
 <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
-  <p class="alert-title"><b>Información!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
-  </ul>
+    <p class="alert-title"><b>Información!</b></p>
+    <ul class="alert-message-list">
+        <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
+    </ul>
 </nb-alert>
 
 <nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
-  <p class="alert-title"><b>Bienvenido!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
-  </ul>
+    <p class="alert-title"><b>Bienvenido!</b></p>
+    <ul class="alert-message-list">
+        <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
+    </ul>
 </nb-alert>
 
 <form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title">
 
-  <div class="form-control-group">
-    <label class="label" for="input-email">Email:</label>
-    <input nbInput
-           fullWidth
-           [(ngModel)]="user.email"
-           #email="ngModel"
-           name="email"
-           id="input-email"
-           pattern=".+@.+\..+"
-           placeholder="Email address"
-           fieldSize="large"
-           autofocus
-           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : 'basic'"
-           [required]="getConfigValue('forms.validation.email.required')"
-           [attr.aria-invalid]="email.invalid && email.touched ? true : null">
-    <ng-container *ngIf="email.invalid && email.touched">
-      <p class="caption status-danger" *ngIf="email.errors?.required">
-      Se requiere un Email!
-      </p>
-      <p class="caption status-danger" *ngIf="email.errors?.pattern">
-        Ingrese un e-mail valido!
-      </p>
-    </ng-container>
-  </div>
+    <div class="form-control-group">
+        <label class="label" for="input-email">Email:</label>
+        <input nbInput fullWidth [(ngModel)]="user.email" #email="ngModel" name="email" id="input-email" pattern=".+@.+\..+" placeholder="Email address" fieldSize="large" autofocus [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : 'basic'" [required]="getConfigValue('forms.validation.email.required')"
+            [attr.aria-invalid]="email.invalid && email.touched ? true : null">
+        <ng-container *ngIf="email.invalid && email.touched">
+            <p class="caption status-danger" *ngIf="email.errors?.required">
+                Se requiere un Email!
+            </p>
+            <p class="caption status-danger" *ngIf="email.errors?.pattern">
+                Ingrese un e-mail valido!
+            </p>
+        </ng-container>
+    </div>
 
-  <div class="form-control-group">
-    <span class="label-with-link">
+    <div class="form-control-group">
+        <span class="label-with-link">
       <label class="label" for="input-password">Contraseña:</label>
       <a class="forgot-password caption-2" routerLink="/auth/request-password">Olvido su contraseña?</a>
     </span>
-    <input nbInput
-           fullWidth
-           [(ngModel)]="user.password"
-           #password="ngModel"
-           name="password"
-           type="password"
-           id="input-password"
-           placeholder="Contraseña"
-           fieldSize="large"
-           [status]="password.dirty ? (password.invalid  ? 'danger' : 'success') : 'basic'"
-           [required]="getConfigValue('forms.validation.password.required')"
-           [minlength]="getConfigValue('forms.validation.password.minLength')"
-           [maxlength]="getConfigValue('forms.validation.password.maxLength')"
-           [attr.aria-invalid]="password.invalid && password.touched ? true : null">
-    <ng-container *ngIf="password.invalid && password.touched ">
-      <p class="caption status-danger" *ngIf="password.errors?.required">
-        Se requiere su contraseña!
-      </p>
-      <p class="caption status-danger" *ngIf="password.errors?.minlength || password.errors?.maxlength">
-        La contraseña debe ser:
-        desde {{ getConfigValue('forms.validation.password.minLength') }}
-        hasta {{ getConfigValue('forms.validation.password.maxLength') }}
-        characters
-      </p>
-    </ng-container>
-  </div>
+        <input nbInput fullWidth [(ngModel)]="user.password" #password="ngModel" name="password" type="password" id="input-password" placeholder="Contraseña" fieldSize="large" [status]="password.dirty ? (password.invalid  ? 'danger' : 'success') : 'basic'" [required]="getConfigValue('forms.validation.password.required')"
+            [minlength]="getConfigValue('forms.validation.password.minLength')" [maxlength]="getConfigValue('forms.validation.password.maxLength')" [attr.aria-invalid]="password.invalid && password.touched ? true : null">
+        <ng-container *ngIf="password.invalid && password.touched ">
+            <p class="caption status-danger" *ngIf="password.errors?.required">
+                Se requiere su contraseña!
+            </p>
+            <p class="caption status-danger" *ngIf="password.errors?.minlength || password.errors?.maxlength">
+                La contraseña debe ser: desde {{ getConfigValue('forms.validation.password.minLength') }} hasta {{ getConfigValue('forms.validation.password.maxLength') }} characters
+            </p>
+        </ng-container>
+    </div>
 
-  <div class="form-control-group accept-group">
-    <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe" *ngIf="rememberMe">Recordarme</nb-checkbox>
-  </div>
+    <div class="form-control-group accept-group">
+        <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe" *ngIf="rememberMe">Recordarme</nb-checkbox>
+    </div>
 
-  <button nbButton
-          fullWidth
-          status="primary"
-          size="large"
-          [disabled]="submitted || !form.valid"
-          [class.btn-pulse]="submitted">
+    <button nbButton fullWidth status="primary" size="large" [disabled]="submitted || !form.valid" [class.btn-pulse]="submitted">
     INGRESAR
   </button>
 </form>
 
 <section *ngIf="socialLinks && socialLinks.length > 0" class="links" aria-label="Social sign in">
-  <!--or enter with:
+    <!--or enter with:
   <div class="socials">
     <ng-container *ngFor="let socialLink of socialLinks">
       <a *ngIf="socialLink.link"
@@ -113,6 +82,6 @@
   -->
 </section>
 
-<section class="another-action" aria-label="Register">
+<!--<section class="another-action" aria-label="Register">
   No se ha registrado? <a class="text-link" routerLink="/auth/register">Registrarse</a>
-</section>
+</section>-->
