--- a/frontend/src/app/pages/dashboard/populations-list/populations-list.component.html
+++ b/frontend/src/app/pages/dashboard/populations-list/populations-list.component.html
@@ -39,7 +39,7 @@
                             <nb-icon icon="link-outline"></nb-icon>
                         </a>
                     </nb-action>
-                    <nb-action icon="download-outline" status="info" title="Descargar Reporte" href="http://localhost:8000/report/{{pop.id}}/{{user.id}}" target="_blank">
+                    <nb-action icon="download-outline" status="info" title="Descargar Reporte" href="environment.baseUrl.backend/report/{{pop.id}}/{{user.id}}" target="_blank">
 
                     </nb-action>
 
