updated final version

--- a/frontend/src/app/pages/auth/auth.component.html
+++ b/frontend/src/app/pages/auth/auth.component.html
@@ -38,6 +38,11 @@
                                         <h5>Bienvenido</h5>
                                         <h6>ACCESO AL MODULO ADMINISTRATIVO</h6>
                                     </div>
+                                    <div class="d-flex justify-content-center" style="height: 70%; margin:-12px">
+                                        <ng-lottie class="mx-auto" [options]="options" (animationCreated)="animationCreated($event,0.3)">
+                                        </ng-lottie>
+
+                                    </div>
                                     <!-- <a class="mt-2" routerLink="/auth/register" nbButton hero shape="round" status="primary">
                               <nb-icon status="control" icon="person-outline"></nb-icon> REGISTRO
                           </a>-->
