--- a/frontend/src/app/pages/auth/auth.component.scss
+++ b/frontend/src/app/pages/auth/auth.component.scss
@@ -34,7 +34,7 @@
         text-align: center;
     }
     .hero>* {
-        margin-top: 2em;
+        //  margin-top: 2em;
     }
     .hero-logo img {
         border-radius: 3px;
