--- a/frontend/src/app/pages/auth/request-password/request-password.component.html
+++ b/frontend/src/app/pages/auth/request-password/request-password.component.html
@@ -38,5 +38,5 @@
 
 <section class="sign-in-or-up" aria-label="Sign in or sign up">
     <p><a class="text-link" routerLink="../login">Ir al login</a></p>
-    <p><a routerLink="../register" class="text-link">Registrarse</a></p>
+    <!--<p><a routerLink="../register" class="text-link">Registrarse</a></p>-->
 </section>
