--- a/frontend/src/app/pages/auth/reset-password/reset-password.component.html
+++ b/frontend/src/app/pages/auth/reset-password/reset-password.component.html
@@ -53,5 +53,5 @@
 
 <section class="sign-in-or-up" aria-label="Sign in or sign up">
     <p><a class="text-link" routerLink="../login">ir al Login</a></p>
-    <p><a class="text-link" routerLink="../register">Registrarse</a></p>
+    <!--<p><a class="text-link" routerLink="../register">Registrarse</a></p>-->
 </section>
