--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="col-md-5">
 
+            <div style="width: 100%" *ngIf="_accessChecker.isGranted('Register Admin', 'all') | async">
+                <ngx-populations-list (onActivate)="onActivate($event)"></ngx-populations-list>
+            </div>
             <nb-card style="width: 100%">
                 <nb-card-body>
                     <div>
@@ -34,47 +37,31 @@
                             </div>
                         </ng-template>
                     </div>
-                </nb-card-body>
-                <nb-card-footer class="text-right color-info">
-                    <b> Campaña Activa: {{ active_population?.name }} </b>
-                </nb-card-footer>
-            </nb-card>
-
-
-            <!--
-            <nb-card style="width: 100%">
-                <nb-card-body>
-                  <h2>Instrucciones</h2>
-
-
-
-
 
                 </nb-card-body>
                 <nb-card-footer class="text-right color-info">
                     <b> Campaña Activa: {{ active_population?.name }} </b>
                 </nb-card-footer>
             </nb-card>
--->
+
         </div>
-        <div class="col-md-7   ">
+        <div class="col-md-7">
+            <div class="row" *ngIf="_accessChecker.isGranted('Register Admin', 'all') | async">
+
+                <div class="col-sm-12">
+
+
+
+
+                    <ngx-surveys-table [title]="'Todas las encuestas'" [surveys]="surveys_all" [user]="user"> </ngx-surveys-table>
+
+
+                </div>
+            </div>
             <ngx-surveys-table [title]="'Mis Encuestas'" [surveys]="surveys" [user]="user"> </ngx-surveys-table>
         </div>
     </div>
 
 
-    <div class="row" *ngIf="_accessChecker.isGranted('Register Admin', 'all') | async">
-        <div class="col-md-5" *ngIf="_accessChecker.isGranted('Register Admin', 'all') | async">
-            <ngx-populations-list (onActivate)="onActivate($event)"></ngx-populations-list>
-        </div>
-        <div class="col-sm-7">
 
-
-
-
-            <ngx-surveys-table [title]="'Todas las encuestas'" [surveys]="surveys_all" [user]="user"> </ngx-surveys-table>
-
-
-        </div>
-    </div>
 </div>
