--- a/frontend/src/app/pages/dashboard/populations-list/populations-list.component.html
+++ b/frontend/src/app/pages/dashboard/populations-list/populations-list.component.html
@@ -13,14 +13,14 @@
         <nb-list class="row mt-3">
             <nb-list-item class="d-flex justify-content-between align-items-stretch" *ngFor="let pop of populations; let i = index;">
 
-                <nb-user [badgeText]="pop.active?'Activa':''" badgeStatus="success" badgePosition="bottom right" size="tiny" [name]="pop.name" [title]="pop.created_at">
+                <nb-user [badgeText]="pop.active?'Activa':''" badgeStatus="success" badgePosition="bottom right" size="tiny" [name]="pop.name">
                 </nb-user>
 
 
                 <nb-actions fullWidth size="small">
 
                     <nb-action title="Borrar Campaña" [swal]="deleteSwal" icon="trash-outline" status="warning">
-                        <swal #deleteSwal title="Seguro que desea eliminar la campaña {{ pop.name }}?" text="Esto no se puede deshacer" icon="question" [showCancelButton]="true" [focusCancel]="true" (confirm)="deletePopulation(pop, i)">
+                        <swal #deleteSwal title="Seguro que desea eliminar la campaña: {{ pop.name }}?" text="Esto no se puede deshacer" icon="question" [showCancelButton]="true" [focusCancel]="true" (confirm)="deletePopulation(pop, i)">
                         </swal>
 
                     </nb-action>
@@ -39,14 +39,14 @@
                             <nb-icon icon="link-outline"></nb-icon>
                         </a>
                     </nb-action>
-                    <nb-action icon="download-outline" status="info" title="Descargar Reporte" href="environment.baseUrl.backend/report/{{pop.id}}/{{user.id}}" target="_blank">
+                    <nb-action icon="download-outline" status="info" title="Descargar Reporte" href="{{environment.baseUrl.backend}}/report/{{pop.id}}/{{user.id}}" target="_blank">
 
                     </nb-action>
 
                     <nb-action *ngIf="!pop.active;else pause" title="Activar" [swal]="activeSwal">
                         <nb-icon icon="play-circle-outline" status="success"></nb-icon>
 
-                        <swal #activeSwal title="Seguro que desea Activar la campaña {{ pop.name }}?" text="Esto cambiara la campaña activa actual" icon="question" [showCancelButton]="true" [focusCancel]="true" (confirm)="activatePopulation(pop, i)">
+                        <swal #activeSwal title="Seguro que desea Activar la campaña: {{ pop.name }}?" text="Esto cambiará la campaña activa actual" icon="question" [showCancelButton]="true" [focusCancel]="true" (confirm)="activatePopulation(pop, i)">
                         </swal>
                     </nb-action>
                     <ng-template #pause>
