--- a/frontend/src/app/pages/dashboard/population-add/population-add.component.html
+++ b/frontend/src/app/pages/dashboard/population-add/population-add.component.html
@@ -1,36 +1,55 @@
-<nb-card size="medium" [nbSpinner]="loading" nbSpinnerStatus="danger" nbSpinnerSize="large" nbSpinnerMessage="">
+<nb-card size="large" [nbSpinner]="loading" nbSpinnerStatus="danger" nbSpinnerSize="large" nbSpinnerMessage="">
     <nb-card-header>Añadir Campaña</nb-card-header>
     <nb-card-body>
+        <div class="row">
 
-        <div>
-            <div class="form-group row">
+            <div class="col-md-5">
+                <b>Instrucciones*:</b>
+                <p></p>
+                <p> 1. Debe agregar un nombre a la campaña</p>
+                <p> 2. Debe crear un archivo excel. El formato del archivo excel debe ser de la siguiente forma:</p>
+                <div class="text-center">
+                    <img src="/assets/img/example.PNG" width="80%">
 
-                <label for="name" class="label col-sm-3 col-form-label">Nombre</label>
-                <form [formGroup]="form">
-                    <input formControlName="name" type="text" nbInput fullWidth id="name" placeholder="Nombre de Campaña">
-
-                </form>
-
-            </div>
-            <div class="form-group row">
-                <label for="name" class="label col-sm-3 col-form-label">Audiencia</label>
-                <ngx-dropzone style="width: 100%;" [multiple]="false" [accept]="'.csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel'" [maxFileSize]="'1000000'" (change)="onSelect($event)">
-                    <ngx-dropzone-label>Arrastre su Archivo aquí</ngx-dropzone-label>
-                    <ngx-dropzone-preview *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
-                        <ngx-dropzone-label>{{ f.name }} </ngx-dropzone-label>
-                    </ngx-dropzone-preview>
-                </ngx-dropzone>
+                </div>
+                <p> 3. Dar clic en "Crear campaña":</p>
 
             </div>
-            <nb-progress-bar *ngIf="progress>0" [value]="progress"></nb-progress-bar>
+            <div class="col-md-6">
+                <div class="form-group row">
+
+                    <label for="name" class="label col-sm-4 col-form-label">Nombre</label>
+                    <form [formGroup]="form" class="col-sm-12">
+                        <input formControlName="name" type="text" nbInput fullWidth id="name" placeholder="Nombre de Campaña">
+
+                    </form>
+
+                </div>
+                <div class="form-group row">
+                    <label for="name" class="label col-sm-4 col-form-label">Audiencia</label>
+                    <ngx-dropzone style="width: 100%;" [multiple]="false" [accept]="'.csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel'" [maxFileSize]="'1000000'" (change)="onSelect($event)">
+                        <ngx-dropzone-label>Arrastre su Archivo aquí</ngx-dropzone-label>
+                        <ngx-dropzone-preview *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
+                            <ngx-dropzone-label>{{ f.name }} </ngx-dropzone-label>
+                        </ngx-dropzone-preview>
+                    </ngx-dropzone>
+
+                </div>
+
+
+                <nb-progress-bar *ngIf="progress>0" [value]="progress"></nb-progress-bar>
 
 
 
+            </div>
         </div>
     </nb-card-body>
     <nb-card-footer>
-        <div class="form-group row">
-            <button nbButton (click)="onSubmit()">Crear Campaña</button>
+        <div class="form-group row ">
+            <div class="col-sm-12 text-center">
+
+                <button status="info" class="text-center" nbButton (click)="onSubmit()">Crear Campaña</button>
+            </div>
         </div>
     </nb-card-footer>
 </nb-card>
