addes update now

--- a/frontend/src/app/pages/dashboard/population-add/population-add.component.html
+++ b/frontend/src/app/pages/dashboard/population-add/population-add.component.html
@@ -7,7 +7,7 @@
                 <b>Instrucciones*:</b>
                 <p></p>
                 <p> 1. Debe agregar un nombre a la campaña</p>
-                <p> 2. Debe crear un archivo excel. El formato del archivo excel debe ser de la siguiente forma:</p>
+                <p> 2. Debe crear un archivo excel. El formato del archivo excel debe ser de la siguiente forma: <b>Debe contener "id" y "nombre"</b> </p>
                 <div class="text-center">
                     <img src="/assets/img/example.PNG" width="80%">
 
