updated icon in new buttom

--- a/frontend/src/app/pages/onu-mujeres/formulario/formulario.component.html
+++ b/frontend/src/app/pages/onu-mujeres/formulario/formulario.component.html
@@ -228,9 +228,9 @@
 <nb-card (click)="onSubmitUpdate(form)" id="fixedbutton">
 
     <nb-badge text="?" status="danger" position="top left"></nb-badge>
-    <p nbTooltip="Si no has terminado y deseas guardar tu progreso, haz clic aquí" nbTooltipStatus="primary" nbButton href="#">
+    <button nbTooltip="Si no has terminado y deseas guardar tu progreso, haz clic aquí" nbTooltipStatus="primary" nbButton>
 
         <nb-icon icon="save-outline">
         </nb-icon>
-    </p>
+    </button>
 </nb-card>
