--- a/frontend/src/app/pages/instrumento/scale-card/scale-card.component.html
+++ b/frontend/src/app/pages/instrumento/scale-card/scale-card.component.html
@@ -1,26 +1,32 @@
 <div class="mt-4">
+
+
     <!--Pregunta General-->
-    <div class="question row">
-        <div class="question-text  col-sm-8">
-            <p class="ml-3"> <span class="num"> {{question.code}} </span> {{question.text}}</p>
-        </div>
-        <div class="instruction  col-sm-4 align-center">
-            <p class="text-blue-orientate caption text-center">Recuerda elegir las opciones en orden de preferencia</p>
-            <img width="200" class="scale-card   " src="assets/Orienta-t/Escala de respuesta/PNG/Oriéntate_Barra.png">
+    <div class="d-flex flex-column justify-content-between">
+        <div class="question row align-items-center">
+            <div class="question-text   col-md-8 p-0 align-items-center">
+                <p class="ml-3"> <span class="num"> {{question.code}} </span> {{question.text}}</p>
+            </div>
+            <div *ngIf="question.id==1" class="instruction  col-md-4 align-items-center">
+                <p class="text-blue-orientate caption text-center">Recuerda elegir las opciones en orden de preferencia</p>
+                <img class="scale-card  text-center mx-auto" src="assets/Orienta-t/Escala de respuesta/PNG/Oriéntate_Barra.png">
+            </div>
         </div>
     </div>
 
-    <!--Sub-pregunta-1-->
-    <div *ngFor="let option of question.options" class="sub-question row">
-        <div class="q-desc col-md-8 p-0">
-            <div class="col-md-10 m-0">
+    <!--Sub-preguntas-->
+    <div class="d-flex flex-column justify-content-between">
+        <div *ngFor="let option of question.options" class="sub-question row align-items-center">
+            <div class="q-desc col-md-8 p-0 align-items-center">
+                <div class="col-md-10 m-0 align-items-center">
 
-                <p>{{option.text}}</p>
-                <!--<p>Seleccion: {{option?.value}}</p>-->
+                    <p class="sub-question-text">{{option.text}}</p>
+                    <!--<p>Seleccion: {{option?.value}}</p>-->
+                </div>
             </div>
-        </div>
-        <div class="q-scale col-md-4">
-            <ngx-scale (onChange)="option.value = $event"></ngx-scale>
+            <div class="q-scale col-md-4 align-items-center">
+                <ngx-scale [value]="form.controls[question.label + '_' + option.subcode].value" (onChange)="setOptionValue(option,$event)"></ngx-scale>
+            </div>
         </div>
     </div>
 
