--- a/frontend/src/app/pages/instrumento/scale/scale.component.html
+++ b/frontend/src/app/pages/instrumento/scale/scale.component.html
@@ -1,9 +1,10 @@
 <div>
+
     <nb-actions size="medium">
         <nb-action *ngFor="let option of options">
-            <nb-icon *ngIf="option.value != value; else active" (click)="setValue(option.value)" pack="orienta-t-icons" [icon]="option.label"></nb-icon>
+            <nb-icon class="click" *ngIf="option.value != value; else active" (click)="setValue(option.value)" pack="orienta-t-icons" [icon]="option.label"></nb-icon>
             <ng-template #active>
-                <nb-icon pack="orienta-t-icons" [icon]="option.label+ '-ol'"></nb-icon>
+                <nb-icon class="click" pack="orienta-t-icons" [icon]="option.label+ '-ol'"></nb-icon>
                 <!--<p>Selected value: {{value}}</p>-->
             </ng-template>
         </nb-action>
