--- a/frontend/src/app/pages/instrumento/scale-card/scale-card.component.html
+++ b/frontend/src/app/pages/instrumento/scale-card/scale-card.component.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="q-scale col-md-4 align-items-center">
-                <ngx-scale [value]="form.controls[question.label + '_' + option.subcode].value" (onChange)="setOptionValue(option,$event)"></ngx-scale>
+                <ngx-scale [value]="form?.controls[question.label + '_' + option.subcode].value" (onChange)="setOptionValue(option,$event)"></ngx-scale>
             </div>
         </div>
     </div>
