--- a/frontend/src/app/pages/perfil-ocupacional/area-card/area-card.component.scss
+++ b/frontend/src/app/pages/perfil-ocupacional/area-card/area-card.component.scss
@@ -1,8 +1,4 @@
-.swiper-container {
-    width: 600px;
-    height: 300px;
-}
-
+@import "~swiper/swiper";
 .swiper-container {
     width: 100%;
     height: 100%;
