--- a/frontend/src/app/pages/instrumento/instructivo/instructivo.component.html
+++ b/frontend/src/app/pages/instrumento/instructivo/instructivo.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-10 offset-md-1  h-100">
     <div class="row  h-100">
-        <div class="illustration-container  mx-auto col-12 order-1 order-md-2 col-md-7 order-1 order-md-2 ">
+        <div class="illustration-container  mx-auto col-12 order-1 order-md-2 col-md-7  ">
             <div class=" illustration  text-right   ">
 
                 <ng-lottie class="mx-auto" [options]="options2" (animationCreated)="animationCreated($event,0.3)">
@@ -9,7 +9,7 @@
 
             </div>
         </div>
-        <div class="info-container col-12 order-2 order-md-1 col-md-5  order-2 order-md-1  ">
+        <div class="info-container col-12  col-md-5  order-2 order-md-1  ">
 
             <div class="row logo mt-md-5 ">
                 <h1 style="display: none;">Orienta-t</h1>
@@ -47,8 +47,4 @@
         </div>
 
     </div>
-
-
-
-
 </div>
