--- a/frontend/src/app/pages/landing/landing.component.scss
+++ b/frontend/src/app/pages/landing/landing.component.scss
@@ -1,36 +1,83 @@
 @import '../../@theme/styles/themes';
+@import '~@nebular/theme/styles/global/breakpoints';
 @include nb-install-component() {
     .logo {
         min-width: 200px;
         margin-left: -30px;
     }
     .slogan h2 {
-        font-size: 40px;
+        font-size: 36px;
         font-weight: 400;
     }
     .cta {
         button {
-            width: 250px;
+            //width: 250px;
             font-size: 26px;
             height: 50px;
             font-weight: 700;
         }
     }
     .disclaimer {
-        position: absolute;
-        bottom: 10%;
+        //position: relative;
+        // bottom: 0;
+        text-align: left;
+        //margin-top: 50px;
         p {
             font-size: 11px;
             font-weight: 400;
             line-height: 1em;
         }
     }
+    nb-layout-footer {
+        box-shadow: none;
+        border: 0;
+    }
     .illustration {
-        position: absolute;
-        bottom: 5%;
-        width: 110%;
+        position: relative;
+        //bottom: 0;
+        width: 100%;
     }
     .mt-6 {
         margin-top: 115px;
+    }
+    .mt-md-6 {
+        margin-top: 115px;
+    }
+    @include media-breakpoint-down(md) {
+        .mt-md-6 {
+            margin-top: 0;
+        }
+        .illustration-container {
+            position: relative;
+            top: 0;
+            width: 100%;
+            height: 200px;
+        }
+        .illustration {
+            position: relative;
+            top: 0;
+            width: 100%;
+        }
+        .logo {
+            margin: 0 auto;
+            margin-top: 20px;
+        }
+        .info-container {
+            text-align: center;
+        }
+        .logo-container {
+            margin: 0 auto;
+        }
+        .disclaimer {
+            text-align: justify;
+            p {
+                font-size: 10px;
+                font-weight: 400;
+                line-height: 1em;
+            }
+        }
+        .slogan {
+            text-align: center;
+        }
     }
 }
