--- a/frontend/src/app/pages/perfil-ocupacional/areas-chart/areas-chart.component.html
+++ b/frontend/src/app/pages/perfil-ocupacional/areas-chart/areas-chart.component.html
@@ -1,3 +1,1 @@
-<div class="chart-container area-chart" style="position: relative; height:40vh; width:70vw">
-    <canvas id="canvas"></canvas>
-</div>
+<chart class="area-chart" type="horizontalBar" [data]="dataG" [options]="options"></chart>
