--- a/frontend/src/app/pages/perfil-ocupacional/level-listing/level-listing.component.html
+++ b/frontend/src/app/pages/perfil-ocupacional/level-listing/level-listing.component.html
@@ -6,10 +6,10 @@
         <nb-list>
             <nb-list-item routerLink="/perfil/ocupacion/{{occupation.title}}" class="d-flex justify-content-between" *ngFor="let occupation of level.occupations; let i = index">
 
-                <a class="text-decoration-none text-dark" href="#">
+                <p class="text-decoration-none text-dark">
                     <span class="num">{{i+1}}</span>{{ occupation.title }}
 
-                </a>
+                </p>
 
                 <button size="small" nbButton status="info" outline shape="round">
                   <nb-icon icon="arrow-ios-forward-outline"></nb-icon>
